[package]
name = "password_grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
base64 = "0.21.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.164"
serde_json = "1.0.96"
whoami = "1.4.0"
windows = { version = "0.48.0", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
